--- a/Statistics/MonteCarloMethod.ipynb
+++ b/Statistics/MonteCarloMethod.ipynb
@@ -5,7 +5,7 @@
    "id": "6b0f7877-da9e-4e73-b31a-3b96c0736f7f",
    "metadata": {},
    "source": [
-    "# モンテカルロ法(Monte Carlo Method) "
+    "# モンテカルロ法:Monte Carlo Method"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "2. 打ち込んだ点が四分円の内側にあるか否かを判定する\n",
     "$$\n",
     "    \\begin{eqnarray}\n",
-    "    Judgement(point) = \n",
+    "    Judge(point) = \n",
     "        \\begin{cases}\n",
     "            Include & (x^2 \\ + \\ y^2 \\leq 1) \\\\\n",
     "            not \\ Include & (x^2 \\ + \\ y^2 > 1) \\\\\n",
@@ -527,13 +527,13 @@
    "metadata": {},
    "source": [
     "### References\n",
-    "- [モンテカルロ法で円周率を求めるのをPythonで実装](https://note.com/shimakaze_soft/n/n9547f5c0bae0)\n",
-    "- [モンテカルロ法で円周率を求める](モンテカルロ法で円周率を求める)"
+    "> [モンテカルロ法で円周率を求めるのをPythonで実装](https://note.com/shimakaze_soft/n/n9547f5c0bae0)  \n",
+    " [モンテカルロ法で円周率を求める](モンテカルロ法で円周率を求める)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e333e80b-5953-47c8-bbd1-ca87fc97a7e8",
+   "id": "aa35f644-bdd4-4a20-b96d-8c7c878e6590",
    "metadata": {},
    "source": [
     "---"
