--- a/HRI-Lab/Paper/CNNArchitecuturesForLarge-ScaleAudioClassification.ipynb
+++ b/HRI-Lab/Paper/CNNArchitecuturesForLarge-ScaleAudioClassification.ipynb
@@ -136,7 +136,7 @@
    "id": "15558d32-73b4-418a-9281-7bbd5502cbe5",
    "metadata": {},
    "source": [
-    "3.3.1 Fully Connected\n",
+    "### 3.3.1 Fully Connected\n",
     " 我々の基準となるネットワークはReLU活性化、N層、各層につきMニューロンの完全結合モデルである。NとMは以下の、N = [2, 3, 4, 5, 6], M = [500, 1000, 2000, 3000, 4000]の中から探した。結果として、最も性能の良いモデルはN = 3, M = 1000, Learning rate = 3x10^-5の時で、10個のGPUと5つのパラメータサーバを用いた。このネットワークはおおよそ1120万個の重みと1120万個の乗数を持つ。"
    ]
   },
