--- a/HRI-Lab/ROS(Robot-Operatting-System)/README.ipynb
+++ b/HRI-Lab/ROS(Robot-Operatting-System)/README.ipynb
@@ -19,6 +19,7 @@
     "- サービス(Service.ipynb)\n",
     "- ノード:node\n",
     "- パッケージ:pkg\n",
+    "- アクション:Action\n",
     "- コマンド(rosbash)\n",
     "- catkin"
    ]
