--- a/HRI-Lab/ROS(Robot-Operatting-System)/Package.ipynb
+++ b/HRI-Lab/ROS(Robot-Operatting-System)/Package.ipynb
@@ -18,12 +18,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c335001e-09ee-4adb-8bab-c3d2bb43e14a",
+   "metadata": {},
+   "source": [
+    "- packageの作成\n",
+    "    - >[ROS パッケージを作る(公式wiki)](http://wiki.ros.org/ja/catkin/Tutorials/CreatingPackage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26389078-a1d1-4a4b-a0ea-f1f1322d89bb",
    "metadata": {},
    "source": [
-    "5. コマンド\n",
-    "- rospack list : 認識されているパッケージの表示\n",
-    "- rospack find _package_name_ : パッケージの検索"
+    "- コマンド\n",
+    "    - `rospack list` : 認識されているパッケージの表示\n",
+    "    - `rospack find _package_name_` : パッケージの検索"
    ]
   },
   {
