--- a/HRI-Lab/Tiago/HowToUseTiago.ipynb
+++ b/HRI-Lab/Tiago/HowToUseTiago.ipynb
@@ -62,7 +62,8 @@
     "    - ~/tiago_public_ws/で実行(以降のコマンドも特に指定がなければそう)\n",
     "    - launch command:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=_value_`\n",
     "      - _value_ = steelとするとデフォルトの手\n",
-    "      - _value_ = titaniumとすると指が5本ある手(Hey 5)"
+    "      - _value_ = titaniumとすると指が5本ある手(Hey 5)\n",
+    "---"
    ]
   },
   {
@@ -231,7 +232,8 @@
     "                - もし`_motion_name_`を空で渡すと実行可能なmotionのリストが返ってくる\n",
     "        - Python\n",
     "            - command:`rosrun play_motion run_motion_python_node.py _motion_name_`\n",
-    "                - `_motion_name_`の所を変更して使用"
+    "                - `_motion_name_`の所を変更して使用\n",
+    "---"
    ]
   },
   {
@@ -241,13 +243,104 @@
    "source": [
     "## 3. Autonomous navigation\n",
     "1. Create a map with gmapping\n",
-    "2. Localization and path planning"
+    "   - package:`gmapping`を使用してlaser mapの作成を行う\n",
+    "   - mapはlaser scanとmapとの整合性を合わせ、地図内のロボットの信頼できる姿勢の推定値を提供するために、後にAMCLに基づくLocalizationを使用する必要がある(ref: 2. Localization and path planning)\n",
+    "   - このmapはautonomous localizationやpath planningなどに使用することができる\n",
+    "   1. Execution\n",
+    "       1. Generate map\n",
+    "           - command:`roslaunch tiago_2dnav_gazebo tiago_mapping.launch public_sim:=true`\n",
+    "               - gazeboとrvizが立ち上がる\n",
+    "               - 移動させていくとmapが生成されていく\n",
+    "           - command:`rosrun key_teleop key_teleop.py`\n",
+    "               - keyboard teleop用（矢印で操作）\n",
+    "       2. Save map\n",
+    "           - command:`rosservice call /pal_map_manager/save_map \"directory: ''\"`\n",
+    "           serviceは以下のディレクトリにmapを保存\n",
+    "               - directory:`/home/_use_name_/.pal/tiago_maps/config`\n",
+    "           \n",
+    "           \n",
+    "2. Localization and path planning\n",
+    "    - 以前にlaser scanから作成されたmapを元に、laserとRGBDカメラを障害物を避けるために考慮した上でautonomous navigationをTiagoにさせる\n",
+    "    1. Execution\n",
+    "        - command:`roslaunch tiago_2dnav_gazebo tiago_navigation.launch public_sim:=true lost:=true`\n",
+    "            - rvizとgazeboが立ち上がる\n",
+    "            - シミュレーションだけでなく、autonomous navigationに必要なノードも立ち上がる\n",
+    "            - mapは以前に作成されたものが自動で使用される\n",
+    "            - rviz上に表示されているものは以下になる\n",
+    "                - Particle cloud  \n",
+    "                    - ロボットの位置+方向を、AMCL(パーティクルフィルタ)のパーティクル(小さな赤の矢印)で表示している  \n",
+    "                    - それが集中しているところが自己位置推定において高い確率を持っているところ\n",
+    "                - Global costmap\n",
+    "                    - 障害物の周囲の色のついた領域\n",
+    "                    - map作成時に登録された障害物(static obstacles)に近づきすぎることなくmap上の移動を計算するglobal plannerに使用される\n",
+    "                - Local costmap\n",
+    "                    - Global costmapと似ているが、範囲が小さく、Tiagoの周りにあるため移動する\n",
+    "                    - 以前に作成したmapには存在しなかった新たな特徴(恐らくdynamic obstacles)を考慮するのに使用される\n",
+    "                    - global plannerがグローバルの移動経路を追従する一方で、障害物(static, dynamicの両方)を避けるために、local plannerに使用される\n",
+    "                - Laser scan\n",
+    "                    - laser scanで得られた地点をダークブルーの線で表示している\n",
+    "                    - Global costmap, Local costmapの両方で障害物を追加、削除するのに使用される\n",
+    "                - RGBD scan\n",
+    "                    - マゼンタ色の線で表示されているのが、Tiagoの頭のRGBDカメラから得られた結果をもとに再構成された地点を表している\n",
+    "                    - Lase scan同様Global costmap, Local costmapの両方で障害物を追加、削除するのに使用される\n",
+    "                    - laser scanで捉えきれない(laserが取り付けられている高さより低いor高いため)3Dの障害物の情報を得るのに役立つ\n",
+    "    2. Localization\n",
+    "        - 起動時にはLocalizationが実際の位置と乖離している\n",
+    "        - Localizationは以下のコマンドを実行する\n",
+    "            - command:`rosservice call /global_localization \"{}\"`\n",
+    "                - (必要?)\n",
+    "                - これによりAMCLの確率的Localizationが起動し、rvizのmap上で大量の赤の矢印が現れる\n",
+    "            - command:`rosrun key_teleop key_teleop.py`\n",
+    "                - これはTiagoを動かして推定値を絞り込むために実行する\n",
+    "                - 回転でもOK、移動によって少しづつ赤色の矢印が一点に集まっていく\n",
+    "            - command:`rosservice call /move_base/clear_costmaps \"{}\"`\n",
+    "                - Tiagoの悪いLocalizationのせいでcostmapにはエラーがあるため、costmapを綺麗にする\n",
+    "                - これによって障害物(static obstacles)のみを考慮したcostmapになる\n",
+    "                - 以上でnavigationを行う準備が完了する\n",
+    "    3. Autonomous navigation with rviz\n",
+    "        - rviz内の`2D Nav Goal`を使用\n",
+    "        - `key_teleop`の方が優先順位が高いため、そっちが起動していると`2D Nav Goal`は使用できないので注意\n",
+    "        - map内の任意の地点をクリック、ホールドするとマゼンタ色の矢印が現れて向きを変えられ、これで指定する位置とそこでの向きを指定する\n",
+    "        - ホールドを止めると、global plannerが障害物に近づきすぎないように経路を計算し、その結果として青の線(経路)とその先に赤矢印(最終位置での方向)が表示される\n",
+    "        - ホールドを止めた時点でTiagoが移動し始め、最終位置がユーザーが事前指定した許容範囲内にあるときに停止する\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b604ea9e-080a-4b4c-bedb-2d5ed64f4a52",
+   "metadata": {},
+   "source": [
+    "## 4. MoveIt!\n",
+    "1. Planning in joint space\n",
+    "    - Tiagoの胴体と腕の関節群を関節の可動限界回避と自己衝突回避を保証する目的の関節空間配置にするためにMoveIt!を用いる\n",
+    "    1. Launching simulation\n",
+    "        - command:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=steel`\n",
+    "    2. Launching the nodes\n",
+    "        - kinematicな設定から慎重に移動計画が計算されるが、この際に以下のnodeを用いる\n",
+    "            - node:`plan_arm_torso_fk included`(c++), package:`/tiago_public_ws/src/tiago_tutorials/tiago_moveit_tutorial`\n",
+    "            - command:`rosrun tiago_moveit_tutorial plan_arm_torso_fk _torso_joint_vale_ _arm_1_joint_value_ _arm_2_joint_value_ _arm_3_joint_value_ _arm_4_joint_value_ _arm_5_joint_value_ _arm_6_joint_value_ _arm_7_joint_value_`\n",
+    "    3. Inspecting the code\n",
+    "        - 実装における重要な点\n",
+    "            - 関節群の選択\n",
+    "            - plannerの選択\n",
+    "            - 初期状態、最終状態の選択\n",
+    "            - planを見つけるための時間を与える\n",
+    "            - planがあれば実行する,なければ実行しない\n",
+    "            - 関節群のコントローラーへの指示は以下ののActionインターフェースを用いて行う\n",
+    "                - topic:`/arm_controller/follow_joint_trajectory/goal`\n",
+    "                - topic:`/torso_controller/follow_joint_trajectory/goal`\n",
+    "            \n",
+    "2. Planning in cartesian\n",
+    "3. Planning in cartesian space with TRACK-IK\n",
+    "4. Planning with Octomap demo\n",
+    "5. Pick & Place demo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91bc8b4-361f-403e-970f-55972c4c4eac",
+   "id": "a0f5ed83-0030-4038-8849-f0c69170246d",
    "metadata": {},
    "outputs": [],
    "source": []
