--- a/HRI-Lab/Tiago/HowToUseTiago.ipynb
+++ b/HRI-Lab/Tiago/HowToUseTiago.ipynb
@@ -313,7 +313,17 @@
    "source": [
     "## 4. MoveIt!\n",
     "1. Planning in joint space\n",
-    "    - Tiagoの胴体と腕の関節群を関節の可動限界回避と自己衝突回避を保証する目的の関節空間配置にするためにMoveIt!を用いる\n",
+    "    - Tiagoの胴体と腕の関節群を関節の可動限界回避と自己衝突回避を保証する目的の関節空間配置にするためにMoveIt!を用いる  \n",
+    "    - MoveIt!は、ロボット制御用のプランニングフレームワークで以下の機能を提供している\n",
+    "        - モーションプランニング\n",
+    "        - マニピュレーション\n",
+    "        - 運動学(順運動学/逆運動学)\n",
+    "        - ナビゲーション\n",
+    "        - 3D環境認識\n",
+    "        > Reference\n",
+    "        > - [ROS入門(35)-MoveItのセットアップ](https://note.com/npaka/n/n90b8db239b38) \n",
+    "        > - [ROS入門(59)-MoveItのコンセプト](https://note.com/npaka/n/nef3aa7de78c2) \n",
+    "        > - [MoveIT!の使い方を徹底解説！ダウンロード方法やチュートリアルは？Setup Assistantも利用してみよう！](https://agency-star.co.jp/column/moveit)\n",
     "    1. Launching simulation\n",
     "        - command:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=steel`\n",
     "    2. Launching the nodes\n",
@@ -331,8 +341,54 @@
     "                - topic:`/arm_controller/follow_joint_trajectory/goal`\n",
     "                - topic:`/torso_controller/follow_joint_trajectory/goal`\n",
     "            \n",
-    "2. Planning in cartesian\n",
+    "2. Planning in cartesian space\n",
+    "    - end-effectorを直交座標系における所定の位置に移動させる\n",
+    "    1. Launching the simulation\n",
+    "        - command:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=steel`\n",
+    "    2. Launching the nodes\n",
+    "        - Tiagoのend-effectorを中心とした座標系:`arm_tool_link`を以下のように`/base_footprint`に対する直交座標系の座標を指定して移動させることができる\n",
+    "        - 安全に所定の座標まで移動させるために、package:`tiago_moveit_tutorial`内のnode:`plan_arm_torso_ik`を以下のように呼び出す必要がある\n",
+    "            - command:`rosrun tiago_moveit_tutorial plan_arm_torso_ik _x_coordinate_ _y_coordinate_ _z_coordinate_ roll_angle_ _pitch_angle_ _yaw_angle_`\n",
+    "    3. Inspecting the code(C++)\n",
+    "        - 以下に重要な点を示す\n",
+    "            - 関節群の選択  \n",
+    "            code:  \n",
+    "            `41   moveit::planning_interface::MoveGroup group_arm_torso(\"arm_torso\");`\n",
+    "            - plannerの選択と基準とする座標軸の選択(今回なら`/base_footprint`)し、所定の`/arm_tool_link`の姿勢はmsg:`geometry_msgs/PoseStamped`を使用して設定   \n",
+    "            code:  \n",
+    "            `28   geometry_msgs::PoseStamped goal_pose;`    \n",
+    "            `29   goal_pose.header.frame_id = \"base_footprint\";`    \n",
+    "            `30   goal_pose.pose.position.x = atof(argv[1]);`    \n",
+    "            `31   goal_pose.pose.position.y = atof(argv[2]);`    \n",
+    "            `32   goal_pose.pose.position.z = atof(argv[3]);`    \n",
+    "            `33   goal_pose.pose.orientation = tf::createQuaternionMsgFromRollPitchYaw(atof(argv[4]), atof(argv[5]), atof(argv[6]));`\n",
+    "            - いつも通りplanを見つけるまでの時間を設定  \n",
+    "            code:  \n",
+    "            `57   group_arm_torso.setPlanningTime(5.0);`\n",
+    "            - もし見つかった場合には実行する  \n",
+    "            code:  \n",
+    "            `68   group_arm_torso.move();`\n",
+    "        - 制御コマンドはarm, torsoそれぞれの制御コントローラに以下のActionインタフェースを使用して送られている\n",
+    "             -  `/arm_controller/follow_joint_trajectory/goal`  \n",
+    "             -  `/torso_controller/follow_joint_trajectory/goal`\n",
+    "             \n",
+    "             \n",
     "3. Planning in cartesian space with TRACK-IK\n",
+    "    - MoveIt!でTRAC-IKを使用してend-effectorを所定の座標に移動させる\n",
+    "    1. Install TRAC-IK plugin\n",
+    "        - TRAC-IK pluginを使用するために、以下のコマンドを実行する\n",
+    "            - command:`sudo apt-get install ros-$ROS_DISTRO-trac-ik-kinematics-plugin`\n",
+    "            - このコマンドで`trac-ik-kinematics-plugin`, `trac_ik_lib`がworkplaceに追加される\n",
+    "    2. Launching the simulation\n",
+    "         - 2つのコンソールを立ち上げておく\n",
+    "         - 1つ目のコンソールでシミュレーションを起動\n",
+    "             - command:`IK_SOLVER=trac_ik roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=steel`\n",
+    "                 - `IK_SOLVER=trac_ik`の部分で、TRAC-IKソルバを指定しており、これがないとKDL solverが選択される\n",
+    "                 - 設定ファイルは、`tiago_moveit_config/config/kinematics_trac_ik.yaml`内にあり、その詳細は[ここ](https://bitbucket.org/traclabs/trac_ik/src/HEAD/trac_ik_kinematics_plugin/)を参照\n",
+    "    3. Launching the nodes\n",
+    "        - コマンドはtutorial4.2のものと同一\n",
+    "        - command:`rosrun tiago_moveit_tutorial plan_arm_torso_ik _x_coordinate_ _y_coordinate_ _z_coordinate_ roll_angle_ _pitch_angle_ _yaw_angle_`\n",
+    "        - 最終姿勢はtutorial4.2と同じであるが、各関節の位置や向きは異なり、これはplannerがMoveIt!依存であり、かつMoveIt!内で異なるIKソルバを使用しているためである\n",
     "4. Planning with Octomap demo\n",
     "5. Pick & Place demo"
    ]
@@ -341,6 +397,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a0f5ed83-0030-4038-8849-f0c69170246d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a913f160-f389-4b51-bc55-2b2f91f3566a",
    "metadata": {},
    "outputs": [],
    "source": []
