--- a/HRI-Lab/Tiago/HowToUseTiago.ipynb
+++ b/HRI-Lab/Tiago/HowToUseTiago.ipynb
@@ -128,13 +128,29 @@
     "                  - topic:`parallel_gripper_controller/command`, massage:`trajectory_msgs/JointTrajectory`\n",
     "              - Action interface(グリッパーの指の分離を制御する)\n",
     "                  - `/parallel_gripper_controller/follow_joint_trajectory`, massage:`control_msgs_/Follow_joint_trajectory`\n",
+    "                  - 上記のように書かれているが、command:`tostopic list`で見ると　topic:`/parallel_gripper_controller/follow_joint_trajectory`なんてものはなく、`/gripper_controller`しかないからそれを使う（使い方は同じ）\n",
     "              - Topic interface(グリッパーの2つのモーターを制御する、つまりそれぞれの指を別々に制御する)   \n",
     "    2. Execution  \n",
     "        1. Launching the simulation\n",
     "            - command:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=titanium world:empty`\n",
     "        2. Launching the node\n",
     "            - kinematicな設定にアクセスするwaypointを実行するノードは、`run_traj_control`(package:`tiago_trajectory_controller`)\n",
-    "        3. Inspecting the node"
+    "        3. Inspecting the node\n",
+    "            - 設定するそれぞれのポイントに到達した際の関節の速度が`velocities`プロパティで指定できる\n",
+    "            - それぞれのポイントで一旦止まるような段階的な動きにしたいのであれば、`velocityes = 0.0`とすれば良い\n",
+    "            - `joint_trajectory_controller`は、座標・速度とポジションコマンドをPID制御の中で対応付ける\n",
+    "            - Joint trajectoryメッセージは、トラジェクトリを実行し始める時間を、headerのtimestampによって指定できる\n",
+    "                 - 今から1秒後に実行し始めたい時には以下のように書く(C++)\n",
+    "                     - command:`arm_goal.trajectory.header.stamp = ros::Time::now() + ros::Duration(1.0)`\n",
+    "            - `arm_controller`であれば、要求されたコマンドは`topic:arm_controller/follow_joint_trajectory`(Action interface)に送られる\n",
+    "            - `gripper_controller`であれば、topic:`/gripper_controller/follow_joint_trajectory`(Action interface)に送られる\n",
+    "            - いずれのcontrollerを使用する際にも同じことだが、時間管理に注意すること\n",
+    "            - それぞれの時間管理パラメータは以下の通り\n",
+    "                - msg:`FollowJointTrajectoryGoal`型のプロパティ`trajectory`内のプロパティ`header`内のプロパティ`stamp`は、メッセージを受け取ってから何秒後にトラジェクトリを実行し始めるかを規定\n",
+    "                - msg:`FollowJointTrajectoryGoal`型のプロパティ`trajectory`内のプロパティ`points`内のプロパティ`time_from_start`は、そのポイントに到達するまでの時間を規定する\n",
+    "                    - そのため、複数個waypointを設定する場合には、一つ前のwaypointの`time_from_start`よりも大きい値を指定しないとエラーになる\n",
+    "                    - Error message:`Trajectory message contains waypoints that are not strictly increasing in time`\n",
+    "                    - 複数のwaypointのあるトラジェクトリでは、それぞれのトラジェクトリ実行毎の終了(開始)タイミングを指定できるのでめちゃ便利"
    ]
   },
   {
@@ -476,12 +492,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0f5ed83-0030-4038-8849-f0c69170246d",
+   "cell_type": "markdown",
+   "id": "edc8821f-92d8-43cd-b091-60eb364f7248",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 5. OpenCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d967e0d8-63cb-41b3-9143-083ce7a3948e",
+   "metadata": {},
+   "source": [
+    "1. Track Sequential(C++)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927fa63a-d7b8-4207-afad-7c262644a9cd",
+   "metadata": {},
+   "source": [
+    "2. Corner Detection(C++)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "178cc9ab-ee9c-4c76-9570-48a28f4daf01",
+   "metadata": {},
+   "source": [
+    "3. Find Keypoints(C++/Python)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdc9d88-137a-452d-9274-455858593a16",
+   "metadata": {},
+   "source": [
+    "4. Matching(C++/Python)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdc89480-1fbd-412a-84fa-32af22221170",
+   "metadata": {},
+   "source": [
+    "5. ArUco marker detection(C++)\n",
+    "    - ArUcoライブラリを用いた標準のマーカーを検知し、3Dの姿勢を得る\n",
+    "    - この方法はロバストなモデルベースの物体検知手法の一つ\n",
+    "    - ArUcoマーカーは平面で正方形のバイナリマーカーで、一辺の長さが与えられていれば、一つの目でその6DoF(6 degrees of freedom:三次元における剛体がとり得る動きの自由度)の姿勢を正確に推定できる\n",
+    "    1. Execution\n",
+    "        - 2つコンソールを立ち上げておく\n",
+    "        - 1つめ\n",
+    "            - commnad:`roslaunch tiago_gazebo tiago_gazebo.launch public_sim:=true robot:=steel world:=tutorial_office gzpose:=\"-x -3.5 -y -0.85 -z 0 -R 0 -P 0 -Y -3.0\"`\n",
+    "        - 2つめ\n",
+    "            - command:`roslaunch tiago_aruco_demo detector.launch`\n",
+    "            - このlaunchファイルで、ノードにID:584(デフォルト)で一辺の長さが10cm(デフォルト)のマーカーを検知するように伝える\n",
+    "            - 違うIDのマーカーを検出したければ、以下の`_marker_ID_`の部分を変更すればOK\n",
+    "                - command:`roslaunch tiago_aruco_demo detector.launch markerId:=_marker_ID_`\n",
+    "            - Rvizが立ち上がり、マーカーのポジションが表示される(そのマーカーのx軸方向が赤い矢印)\n",
+    "            - Rvizを見ると分かる通り、視界内に含まれているArUcoマーカー全てを検知できる\n",
+    "            - topic:`/aruco_single/pose`にframe_id:`/base_footprint`で配信されている\n",
+    "                - ただし、視界内に対象となるマーカーがなければ更新されないので注意が必要\n",
+    "                - このlaunchファイルでは、複数個のマーカーの座標を同時に検出してtopicにまとめて送信してくれるみたいのはない\n",
+    "                - 二つ同時に立ち上げようとすると先に立ち上げた方が落ちる\n",
+    "            - 視界内に対象のマーカーが入っていなければ赤い矢印は表示されない\n",
+    "        - もしマーカーが検出できなければ、2-5.Head controlで使用した`look_to_point`を使用してTiagoの頭を動かすと良い"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f13a02-eef8-43e2-9bc4-2035a9f7d858",
+   "metadata": {},
+   "source": [
+    "6. Person detection(C++)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e995ab3c-255b-48de-8914-a8fc3d55edd3",
+   "metadata": {},
+   "source": [
+    "7. Face detection(C++)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9f4dcc-67e6-4e43-93bc-7ca54ca5c742",
+   "metadata": {},
+   "source": [
+    "8. Planar object detection and pose estimation(C++)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,6 +589,35 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5eeec0c-bdb2-4062-810d-5006928e0de6",
+   "metadata": {},
+   "source": [
+    "## TIAGo Handbook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c01a5c69-eec1-4802-bdc1-54e533a887ad",
+   "metadata": {},
+   "source": [
+    "4. Introduction to safety\n",
+    "    1. Overview\n",
+    "        - 安全性のための章で必ず読むこと\n",
+    "    2. Intended applications\n",
+    "        - TIAGoは常に訓練されたスタッフによる監視の下、管理された環境下で作動されるように設計された、ロボット研究及び開発platoformである\n",
+    "        - 以下の研究領域をカバー\n",
+    "            - ナビゲーションとSLAM\n",
+    "            - マニピュレーション\n",
+    "            - 認知\n",
+    "            - 音声認識\n",
+    "            - HRI\n",
+    "    3. Working environment and usage guidelines\n",
+    "        - 環境温度は10~35度の間であること\n",
+    "    4. Battery manipulation"
    ]
   },
   {
