--- a/Machine Learning/DataSet/Iris.ipynb
+++ b/Machine Learning/DataSet/Iris.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "88434b40-2df9-4e6f-9777-5eb6b9dde92d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "---"
    ]
@@ -167,7 +169,7 @@
    "id": "772f82e4-c280-40d2-b56f-56a073797554",
    "metadata": {},
    "source": [
-    "## 2. データ操作"
+    "## 2. Usage"
    ]
   },
   {
