--- a/HRI-Lab/Tiago/CreateAction.ipynb
+++ b/HRI-Lab/Tiago/CreateAction.ipynb
@@ -34,6 +34,16 @@
     "arm_7:1.69\n",
     "torso_lift:0.15"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8986aa0c-fd08-4d59-a01f-f9648e324afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic:/audio_2_micsに音の情報が流れてくる"
+   ]
   }
  ],
  "metadata": {
