--- a/HRI-Lab/Tiago/HowToUseTiago.ipynb
+++ b/HRI-Lab/Tiago/HowToUseTiago.ipynb
@@ -460,10 +460,17 @@
     "            - command:`roslaunch tiago_moveit_config demo_tiago.launch`\n",
     "                - Rvizが起動し、インタラクティブマーカーが表示されたTiagoが映る\n",
     "<br />\n",
-    "<br />\n",
-    "5. Pick & Place demo\n",
+    "<br />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a7e0c0-c1c0-4f58-a482-276e788b6bb8",
+   "metadata": {},
+   "source": [
+    "5. Pick & Place demo         \n",
     "    - 環境はテーブルとArUcoマーカーが用意された一つの箱から成る\n",
-    "    - カメラのRGB情報から物体の位置を特定し、3D姿勢を再構築する\n",
+    "    - カメラのRGB情報から物体の位置を特定し、3D姿勢を再構築する    \n",
     "    - その後MoveIt!が物体を掴むためにpick系列のplanningに使用され、place系列が物体を下の位置に戻すためにplanningされる\n",
     "    1. Launching the simulation\n",
     "        - 一つ目のコンソールで、シミュレーションを起動\n",
@@ -604,20 +611,45 @@
    "id": "c01a5c69-eec1-4802-bdc1-54e533a887ad",
    "metadata": {},
    "source": [
-    "4. Introduction to safety\n",
-    "    1. Overview\n",
-    "        - 安全性のための章で必ず読むこと\n",
-    "    2. Intended applications\n",
-    "        - TIAGoは常に訓練されたスタッフによる監視の下、管理された環境下で作動されるように設計された、ロボット研究及び開発platoformである\n",
-    "        - 以下の研究領域をカバー\n",
-    "            - ナビゲーションとSLAM\n",
-    "            - マニピュレーション\n",
-    "            - 認知\n",
-    "            - 音声認識\n",
-    "            - HRI\n",
-    "    3. Working environment and usage guidelines\n",
-    "        - 環境温度は10~35度の間であること\n",
-    "    4. Battery manipulation"
+    "## 4. Introduction to safety\n",
+    "  1. Overview\n",
+    "      - 安全性のための章で必ず読むこと\n",
+    "  2. Intended applications\n",
+    "      - TIAGoは常に訓練されたスタッフによる監視の下、管理された環境下で作動されるように設計された、ロボット研究及び開発platoformである\n",
+    "      - 以下の研究領域をカバー\n",
+    "          - ナビゲーションとSLAM\n",
+    "          - マニピュレーション\n",
+    "          - 認知\n",
+    "          - 音声認識\n",
+    "          - HRI\n",
+    "  3. Working environment and usage guidelines\n",
+    "      - 環境温度は10~35度の間であること\n",
+    "  4. Battery manipulation\n",
+    "  \n",
+    "## 36. Whole Body Control(WBC)\n",
+    "  1. Overview\n",
+    "      - WBCとは、Pal社が開発した\"Stack of Tasks\"を実装したもの\n",
+    "      - WBCには100Hzで動作する階層型二次ソルバーが含まれており、それぞれ異なる優先順位を持つタスクを実行可能\n",
+    "      - WBCはタスク実行のために、すべての上半身の関節制御権限を持つ\n",
+    "      - WBCパッケージでは以下のStack of Taskが予め定義されている\n",
+    "          - 関節限界回避:関節の駆動限界を超えないようにする\n",
+    "          - 自己衝突回避:ロボットのアームと他の部分が衝突しないようにする\n",
+    "      - 上記二つのタスクはWBCによって自動的に管理されており、常に最優先でアクティブにする必要がある\n",
+    "      - これらを使用しないのは危険\n",
+    "      - ユーザーはend-effectorを任意の空間座標に移動させたり、任意の空間点を向くようにする新規タスクを追加することが可能\n",
+    "      - 以下のサブセクションで見るように変更が可能\n",
+    "      - WBCと他の逆運動学ソルバとの違いは、WBCがオンラインの解を見つけ、自動的に自己衝突を防ぎ、かつ関節の駆動限界回避を保証する点にある\n",
+    "  2. WBC through ROS interface    \n",
+    "      - まだ\n",
+    "  3. WBC with Aruco demo\n",
+    "      - このデモではTiagoの上体をWBCデフォルトタスクで制御する\n",
+    "      - headとend-effectorを検出したArucoマーカーの方向を向くようにする\n",
+    "      - 詳しくは[動画](https://www.youtube.com/watch?v=kdwShb-YrbA)を参照\n",
+    "      - tab:`WBC/Aruco demo`を起動する前に、tab:`Startup`でnode:`head_manager`が動いているか確認してから行う\n",
+    "      - Arucoマーカー検出を始める時に、Tiagoのアームが上がる\n",
+    "      - そして、position controllerが停止し、WBC(Whole Body Controller)が自動的に起動する\n",
+    "      - このdemoで用いられるマーカーはId:`582`\n",
+    "      - 停止ボタンを押すと、WBCが終了すると共に、デフォルトのposition controllerに権限が移る"
    ]
   },
   {
@@ -627,19 +659,45 @@
    "source": [
     "使用法\n",
     "- Tiago\n",
-    "電源ボタンを押した後、右のボタンを押すと内部のPCが起動する。\n",
-    "起動が完了すると、自動でHomeの姿勢に写る\n",
-    "WiFiのアクセスポイント`PAL-Robotics`が自動でオンになる\n",
-    "shutdown:36page\n",
-    "- hri-guest51(Development PC)\n",
-    "  - WiFi:PAL-Roboticsに繋いだ後、sshコマンドでTiagoの内部PCにアクセスする\n",
-    "    - command:`ssh tiago-93c`\n",
+    "  - 電源ボタンを押した後、右のボタンを押すと内部のPCが起動する。  \n",
+    "  - 起動が完了すると、自動でHomeの姿勢に写る  \n",
+    "  - WiFiのアクセスポイント`PAL-Robotics`が自動でオンになる    \n",
+    "  - shutdown:36page\n",
+    "- hri-guest51(DevelopmentPC)\n",
+    "  - Tiagoの内部コンピュータへのssh接続　　　　　\n",
+    "    - WiFi:PAL-Roboticsに繋いだ後、sshコマンドでTiagoの内部PCにアクセスする　　　　\n",
+    "    - command:`ssh tiago-93c`　　　\n",
+    "    - password:`pal`(normal user)(この辺もマニュアル参照)\n",
     "  - Web Commander\n",
     "    - Chromeから自動で立ち上がる\n",
     "    - 各種設定からTiagoの現在のカメラ映像まで取得可能\n",
+    "    - Log\n",
+    "      - page:`Logs`でFatalからDebugまで使用することでデバッグしやすい\n",
+    "      - rospy.loginfo()もここで見れる\n",
+    "    - Diagnostics\n",
+    "      - ここではどこかで警告が発せられてないか、異常がないかを確認できる\n",
+    "        - 例えば、充電器を挿しているとFunctionally:warning, Navigation:Navigation is paused!となっており、セーフティでナビゲーション自体ができなくなる\n",
+    "  - ちなみにこの特殊なROS:merodic+Tiagoのものはfs-1の方にあるので必要に応じて使用すること\n",
     "    \n",
+    "- 録音方法\n",
+    "  - hri-guest90にプログラムがある\n",
+    "  - path:`/home/robovie/catkin_ws/src/moonshot/launch`内の`audio_recording_2_mics.launch`を使用する\n",
+    "  - パラメータがPC内のデフォルトを参照するように設定されているので、GUIのsetting/soundのところのデフォルトデバイスが正しいか確認すること\n",
+    "  - このパラメータがサンプリング周期16000Hzであったり、マイクの数を規定しているのできちんとあっているか確認\n",
+    "  - ちなみにwaveのままでOK\n",
+    "  - これを使用することで、topic:`/audio_2_mics`にデータが送信されるため、これを購読して保存するようにすればOK\n",
+    "  - マイクの設定だが、つまみを回して赤くならないように設定する。これが小さすぎても閾値で大きいなおとが消されるので注意が必要\n",
+    "  - データは同じ時間に集音された音がマイク0のデータ：マイク1のデータの順に格納されてくるので、データを使える形に整形してから行う必要がある\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b044b02-9286-478e-9660-bf8abe9c94e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
