--- a/HRI-Lab/ROS(Robot-Operatting-System)/Service.ipynb
+++ b/HRI-Lab/ROS(Robot-Operatting-System)/Service.ipynb
@@ -166,6 +166,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51d8320-7a16-495e-91b7-b576d879bca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rospy.wait_for_message('<トピック名>', 型, timeout=<>)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "118c531d-c418-4c95-8a31-e4e291b9d44e",
    "metadata": {},
@@ -267,8 +277,8 @@
    "id": "d808d331-f6ac-4de8-bb5f-33f09e47edbe",
    "metadata": {},
    "source": [
-    "チュートリアル:\n",
-    "https://wiki.ros.org/ja/ROS/Tutorials/CreatingMsgAndSrv#Creating_a_srv"
+    ">[チュートリアル](https://wiki.ros.org/ja/ROS/Tutorials/CreatingMsgAndSrv#Creating_a_srv)     \n",
+    ">[[ROS] トピックを一度だけ購読する](https://qiita.com/yudaikubota-me/items/dd420b92c9cdb5019c05)\n"
    ]
   },
   {
@@ -296,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
