--- a/HRI-Lab/Tiago/HowToUseTiago.ipynb
+++ b/HRI-Lab/Tiago/HowToUseTiago.ipynb
@@ -809,9 +809,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ca86a12-8c35-495f-b240-bcc7dfd0f9db",
+   "metadata": {},
+   "source": [
+    "## 各種ファイルの絶対パス(Development PC, simulationの順に記載)\n",
+    " - ロボットのモデル(arm, torso, head)\n",
+    "   - urdf(xacro)\n",
+    "     - `/opt/pal/ferrum/share/tiago_description/urdf/`\n",
+    "     - `~/tiago_public_ws/src/tiago_robot/tiago_description/urdf/`\n",
+    "   - meshes\n",
+    "     - `/opt/pal/ferrum/share/tiago_description/meshes/`\n",
+    "     - `~/tiago_public_ws/src/tiago_robot/tiago_description/meshes/`\n",
+    " - ロボットのモデル(hand)\n",
+    "   - pal_gripper\n",
+    "     - urdf(xacro)\n",
+    "       - `/opt/pal/ferrum/share/pal_gripper_description/urdf/`\n",
+    "     - meshes\n",
+    "       - `/opt/pal/ferrum/share/pal_gripper_description/meshes/`\n",
+    " - play_motionのデフォルトモーション\n",
+    "    - `/opt/pal/ferrum/share/tiago_bringup/config/motions/tiago_motions_pal-gripper.yaml`\n",
+    " - 自動起動のノード\n",
+    "   - head_manager\n",
+    "     - `/opt/pal/ferrum/share/pal_head_manager/launch/tiago_head_manager.launch`\n",
+    "   - marker_detecter\n",
+    "     - `/opt/pal/ferrum/share/tiago_bringup/launch/marker_detecter.launch`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c6fa5cf-a972-4fd1-9bad-476506afd86e",
+   "metadata": {},
+   "source": [
+    "## 自分の変更点\n",
+    " - pal_gripperの内部モデル変更\n",
+    "   - モデルの変更\n",
+    "     - `/opt/pal/ferrum/share/pal_gripper_description/meshes/gripper_finger_link.stl`をblenderでインポートし、ネジで止められている面でオブジェクトを切断し、位置を目視で合わせた上で二つのオブジェクトを結合\n",
+    "   - 当たり判定の変更\n",
+    "     - 一応meshesのフォルダ内にコリジョン用のメッシュがあるが、実際に.urdf.xacroファイルを読むと横1cm幅5cm高さ11cmのboxが当たり判定として使用されているのが確認できたため、実際はこのboxの数値を変更するだけでよい\n",
+    "     - 差分は、gazeboのviewタブ/collisionを選択して左のモデルパネル内のgripper_finger_linkのcollisionがどれくらいずれているかを微調整して数値を求めた\n",
+    "     - `/opt/pal/ferrum/share/tiago_desctiption/urdf/gripper.urdf.xacro`内\n",
+    "       - `<link name=\"${name}_right_finger_link\">`タグ内の`<collision><origin rpy=\"0 0 3.1415\" xyz=\"0.005 0 -0.165\">`を`<origin rpy=\"0 0 3.1415\" xyz=\"0.018 0 -0.165\">`に変更\n",
+    "       - `<link name=\"${name}_left_finger_link\">`タグ内の`<collision><origin rpy=\"0 0 3.1415\" xyz=\"-0.005 0 -0.165\">`を`<origin rpy=\"0 0 3.1415\" xyz=\"-0.018 0 -0.165\">`に変更\n",
+    "   - ファイルの変更\n",
+    "     - 元々あった`/opt/pal/ferrum/share/pal_gripper_description/meshes/gripper_finger_link.stl`を`/opt/pal/ferrum/share/pal_gripper_description/meshes/gripper_finger_link_bak.stl`に変更し、自作のstlファイルを同フォルダに設置"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b044b02-9286-478e-9660-bf8abe9c94e1",
+   "id": "28975308-e12a-4d46-87d1-abd51b4aa7cd",
    "metadata": {},
    "outputs": [],
    "source": []
