apply mac's local change to master

--- a/HRI-Lab/Untitled.ipynb
+++ b/HRI-Lab/Untitled.ipynb
@@ -43,12 +43,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dd023dd-7e1a-420d-9052-bffc0709eded",
+   "metadata": {},
+   "source": [
+    "- e6\n",
+    "  - content data\n",
+    "    - try:\n",
+    "    - result:0,1,1,0,1,0,0,1\n",
+    "48秒\n",
+    "14秒"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f34101da-7668-4f4c-8841-b6ababc1f5a2",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d41a29f9-34fe-4616-b794-0fa2fc4def90",
+   "metadata": {},
+   "source": [
+    "本実験"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f65b6da-b205-403f-b5f1-69cb83e46e2c",
+   "id": "b4b4d617-8d30-4acb-ab7b-1587508f6e67",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "23回目記録なし"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9916a6f5-5b61-4487-b1de-24677ccffa1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "グリッパーの手前側を開けて、内部の基盤を停めている4つのネジを外す。\n",
+    "そしてその裏に3つケーブルがつながっているので、そこのコネクターの部分を確認してみる。今回はこれで治った。"
+   ]
   }
  ],
  "metadata": {
